--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@astrojs/image": "^0.16.6",
     "@astrojs/mdx": "^0.19.0",
+    "@astrojs/partytown": "^1.2.1",
     "@astrojs/rss": "^2.3.2",
     "astro": "^2.3.0",
     "astro-auto-import": "^0.2.1",
