--- a/src/config/config.json
+++ b/src/config/config.json
@@ -33,7 +33,7 @@
   },
 
   "disqus": {
-    "enable": true,
+    "enable": false,
     "shortname": "themefisher-template",
     "settings": {}
   },
