deberia ser estable

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,9 @@
 [build]
 publish = "dist"
-command = "astro build"
+command = "yarn build"
 
 [build.environment]
-NODE_VERSION = "18.16.0"
+NODE_VERSION = "18"
 
 [[headers]]
 for = "/*" # This defines which paths this specific [[headers]] block will cover.
@@ -13,10 +13,3 @@ for = "/*" # This defines which paths this specific [[headers]] block will cover
 # X-XSS-Protection = "1; mode=block"
 # Referrer-Policy = "same-origin"
 # Strict-Transport-Security = "max-age=31536000; includeSubDomains; preload"
-
-[[redirects]]
-  from = "/intranet"
-  to = "/secured"
-  force = true
-  status = 200
-  conditions = {Role = ["editor"]}
