--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier -w ."
   },
   "dependencies": {
+    "@astrojs/partytown": "^1.2.1",
     "@astrojs/image": "^0.16.7",
     "@astrojs/mdx": "^0.19.1",
     "@astrojs/react": "^2.1.3",
