--- a/netlify.toml
+++ b/netlify.toml
@@ -19,5 +19,5 @@ for = "/*" # This defines which paths this specific [[headers]] block will cover
   from = "/intranet"
   to = "/login"
   force = true
-  status = 200
+  status = 200!
   conditions = {Role = ["editor"]}
